--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -49,6 +49,6 @@ task grun(type: JavaExec) {
     args += "-trace"
     args += "-diagnostics"
     args += "-gui"
-    args += "src/test/resources/original_a_only.shef"
+    args += project.findProperty("shefFile") ?: "src/test/resources/original_a_only.shef"
     //args += "src/test/resources/a.shef"
 }
